# efm32-unified-crate

./: Cargo.toml  LICENSE  README.md  build.rs
src/: main.rs
svd/: EFM32HG.tmpl.svd
